# GraphIt

./: CMakeLists.txt  README.md
data/: 4elt.txt  Petersen.txt  README.txt  ar_m8x8.txt  ef_4elt2.txt  ef_body.txt  fe_3elt.txt  fe_bcsstk29.txt  lattice.txt  nice.txt  sphere.txt
src/: CMakeLists.txt  Graph.cpp  Graph.hpp  Hall.cpp  Hall.hpp  Hall_impl.hpp  SparseGraph.hpp  SparseGraph_impl.hpp  SparseHall.hpp  SparseHall_impl.hpp  SparseTest.cpp  a.out  test  test.cpp  test.out  viz  viz.cpp
